deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adapter-svc
  namespace: poc
  labels:
    app: adpater
spec:
  ports:
   - targetPort: 5002
     port: 5002
  selector:
    app: adapter-dep
